style: fix birth date input on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -235,3 +235,21 @@ select {
 .form-style .MuiTextField-root .MuiInputLabel-root.Mui-focused {
   color: #4a148c;
 }
+
+input[type="date"]:disabled {
+  background-color: #f3f4f6 !important;
+  color: #000 !important;
+  font-family: "Montserrat", sans-serif !important;
+  border: 1px solid #d1d5db !important;
+  border-radius: 8px;
+  padding-left: 1rem;
+  height: 44px;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+input[type="date"]::-webkit-datetime-edit {
+  color: #000 !important;
+  font-family: "Montserrat", sans-serif !important;
+}
